@@ -1,3 +1,11 @@
+2014-05-30  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* godmode/reporting/visual_console_builder.editor.js,
+	include/functions_visual_map_editor.php: fixed the palette tool for
+	item group.
+	
+	Incident: #838
+
 2014-05-30  Sergio Martin <sergio.martin@artica.es>
 
 	* godmode/servers/manage_recontask_form.php: Changed the recon task
